--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Welcome!!!</h1>
+    <h2>Mama i can code now.</h2>
+    <h3>Hurry! i can code now.</h3>
+    <h4>I am now a web developer.</h4>
 </body>
 </html>
