--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <h2>Mama i can code now.</h2>
     <h3>Hurry! i can code now.</h3>
     <h4>I am now a web developer.</h4>
+    <p>I am now coding coding coding and coding.</p>
+    <p>Hi guys. how can i help you?</p>
 </body>
 </html>
