--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <h4>I am now a web developer.</h4>
     <p>I am now coding coding coding and coding.</p>
     <p>Hi guys. how can i help you?</p>
+    <img src="Rana.jpg" alt="">
+    <img src="bossssss.jpg">
 </body>
 </html>
