--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <p>Hi guys. how can i help you?</p>
     <img src="Rana.jpg" alt="">
     <img src="bossssss.jpg">
+    <img src="images/Mou.jpg">
 </body>
 </html>
